# serial-kit

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build-installer.yml  ci.yml
compiler/: CMakeLists.txt  main.cpp
compiler/include/: arg_parser.hpp  ast.hpp  codegen.hpp  lexer.hpp  parser.hpp  validator.hpp
compiler/source/: arg_parser.cpp  ast.cpp  codegen.cpp  lexer.cpp  parser.cpp  validator.cpp
docs/: api_reference.md  dsl_reference.md  tutorial.md  wire_format.md
examples/: 01_basic_types.skit  02_user_auth.skit  03_network_protocol.skit  04_game_state.skit  05_configuration.skit  06_iot_sensors.skit  07_optimizations.skit
installer/: path_patch.xml  serialkit.iss
runtime/: CMakeLists.txt
tests/: CMakeLists.txt  test_arg_parser.cpp  test_codegen.cpp  test_lexer.cpp  test_parser.cpp  test_validator.cpp
